--- a/job/templates/jobPublic.html
+++ b/job/templates/jobPublic.html
@@ -8,10 +8,11 @@
     <script type="text/javascript" charset="UTF-8" src="../../static/js/auditSys/table.js"></script>
     <script type="text/javascript" charset="UTF-8" src="../../static/js/auditSys/jquery-1.11.0.min.js"></script>
 </head>
-<body >
+<body onload="initTest()">
 <div id="pageTitle">招聘发布</div>
 <br><br>
 <div id="centerContainer">
+
     <label>招聘单位:</label>
     <select name="department">
         <option value="#">选择部门</option>
@@ -30,7 +31,7 @@
     <label>创建申请表:</label>
     <button class="tabelBtm" id="createTable" onclick="nextStep()">生成表格</button>
     <br><br>
-    <button class="submitBtm" id="createTable">发布</button>
+    <button class="submitBtm" id="createTable" onclick="publicJob()">发布</button>
     <br><br>
 </div>
 </body>
