工作部分：查，删，增

--- a/job/templates/tableTemplate.html
+++ b/job/templates/tableTemplate.html
@@ -2,14 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>问卷模板</title>
     <link rel="stylesheet" href="../../static/css/style.css"/>
     <script type="text/javascript" charset="UTF-8" src="../../static/js/auditSys/table.js"></script>
     <script type="text/javascript" charset="UTF-8" src="../../static/js/auditSys/jquery-1.11.0.min.js"></script>
-    <script type="text/javascript" charset="UTF-8" src="../../static/js/auditSys/index.js"></script>
 </head>
-<body onload="jobTemInit()">
-<div id="jobTem">
-</div>
+<body onload="tableTemplateInit()">
+<div id="templateContainer"></div>
 </body>
 </html>
