--- a/job/templates/jobManagement.html
+++ b/job/templates/jobManagement.html
@@ -13,59 +13,81 @@
     <script type="text/javascript" charset="UTF-8" src="../../static/js/auditSys/index.js"></script>
 </head>
 <body style="padding-left: 5%;padding-top: 30px">
-<div id="tb" style="padding:5px;height:auto">
-    <div style="margin-bottom:5px">
-        <a href="#" class="easyui-linkbutton" iconCls="icon-edit" plain="true"></a>
-        <a href="#" class="easyui-linkbutton" iconCls="icon-save" plain="true"></a>
-        <a href="#" class="easyui-linkbutton" iconCls="icon-cut" plain="true"></a>
-        <a href="#" class="easyui-linkbutton" iconCls="icon-remove" plain="true"></a>
-        Language:
-        <input class="easyui-combobox" style="width:100px"
-               url="data/combobox_data.json"
-               valueField="id" textField="text">
-        <a href="#" class="easyui-linkbutton" iconCls="icon-search">Search</a>
-    </div>
 
+<div id="tb" style="padding-top:0px;height:auto;">
+    <div id="btnSets" style="margin-bottom:5px;">
+        <a href="#" onclick="editJob()" class="easyui-linkbutton" iconCls="icon-edit" plain="true">编辑</a>
+        <a href="#" onclick="deleteJob()" class="easyui-linkbutton" iconCls="icon-remove" plain="true">删除</a>
+    </div>
 </div>
+
 <table class="easyui-datagrid" style="width:95%;height:auto;"
-       url="job"
+       url="job" id="tdTable"
        title="DataGrid - Complex Toolbar" toolbar="#tb"
        singleSelect="true" fitColumns="true" rownumbers="true" pagination="true" method="get">
     <thead>
     <tr>
         {#        <th field="id" width="30">序号</th>#}
-        <th field="position" width="120">职位</th>
+        <th field="position" width="100">职位</th>
         <th field="department" width="100">部门</th>
         <th field="salary" width="70">薪资</th>
-        <th field="table" width="120">申请表</th>
+        <th data-options="field:'table',width:100,formatter:planUrl">申请表</th>
+        <th data-options="field:'status',width:50">状态</th>
+        <th data-options="field:'deadline',width:100">截至时间</th>
         <th field="created_by" width="50">创建人</th>
-        <th field="create_time" width="80">创建时间</th>
-        <th field="last_update_time" width="80">更新时间</th>
+        <th field="create_time" width="100">创建时间</th>
+
     </tr>
     </thead>
 </table>
 <script type="text/javascript">
+    function planUrl(value, row, index) {
+        return "<a href=tableTemplate?id=" + value.id + ">" + value.title + "</a>";
+    }
+
     $(function () {
-        var pager = $('#dg').datagrid().datagrid('getPager');	// get the pager of datagrid
-        pager.pagination({
-            buttons: [{
-                iconCls: 'icon-search',
-                handler: function () {
-                    alert('search');
-                }
-            }, {
-                iconCls: 'icon-add',
-                handler: function () {
-                    alert('add');
-                }
-            }, {
-                iconCls: 'icon-edit',
-                handler: function () {
-                    alert('edit');
-                }
-            }]
-        });
+        var pager = $('#tdTable').datagrid('getPager');	// get the pager of datagrid
+        pager.pagination();
+        $('#tdTable').datagrid({
+            onDblClickRow: function (index, row) {
+                $('#tdTable').datagrid("selectRow", index);
+                var currentRow = $('#tdTable').datagrid("getSelected");
+                window.location.href = 'jobTemplate?id=' + currentRow['id']
+            }
+        })
+
     })
+
+    function deleteJob() {
+        var currentRow = $('#tdTable').datagrid("getSelected");
+        if (currentRow == null) {
+            alert("请先选中一行")
+        } else {
+            if (confirm("确认删除？")) {
+                $.ajax({
+                    type: 'DELETE',
+                    url: 'job?id=' + currentRow.id,
+                    dataType: 'json',
+                    success: function (data) {
+                        alert("成功")
+                    },
+                    error: function () {
+                        console.log()
+                    }
+                })
+            }
+        }
+    }
+
+    function editJob() {
+
+        var currentRow = $('#tdTable').datagrid("getSelected");
+        if (currentRow == null) {
+            alert("请先选中一行")
+        } else {
+            window.location.href = 'jobPublic?id=' + currentRow.id
+        }
+    }
 </script>
 <script type="application/javascript">
     var datagrid = document.getElementsByClassName('easyui-datagrid')[0];
@@ -73,11 +95,12 @@
     var role = value[0];
     if (role == 'Office Head') {
         datagrid.title = '我的发布';
+
     } else {
         datagrid.title = '职位浏览';
+        var btnSets = document.getElementById('btnSets');
+        btnSets.style.display = 'None';
     }
-
-
 </script>
 </body>
 </html>
