修改前端细节，后端逻辑及Bug

--- a/account/templates/auditSys/login.html
+++ b/account/templates/auditSys/login.html
@@ -12,7 +12,7 @@
     <div id="loginBottom">
         <form method="post" id="loginForm">
             <label>用户名：</label>
-            <input name="username" type="text"><br><br>
+            <input name="username" class="easyui-textbox" data-options="iconCls:'icon-search'" type="text"><br><br>
             <label>密码：</label>
             <input name="password" type="password"><br>
             <input type="submit" value="登录" onclick="register()">
