--- a/job/templates/tableName.html
+++ b/job/templates/tableName.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <title>西南大学审批系统</title>
     <link rel="stylesheet" href="../../static/css/style.css"/>
+    <link rel="stylesheet" type="text/css" href="../../static/js/jquery-easyui-1.8.2/themes/default/easyui.css">
+    <link rel="stylesheet" type="text/css" href="../../static/js/jquery-easyui-1.8.2/themes/icon.css">
+    <link rel="stylesheet" type="text/css" href="../../static/js/jquery-easyui-texteditor/texteditor.css">
+    <script type="application/javascript" src="../../static/js/jquery-easyui-1.8.2/jquery.min.js"></script>
+    <script type="application/javascript" src="../../static/js/jquery-easyui-1.8.2/jquery.easyui.min.js"></script>
+    <script type="application/javascript" src="../../static/js/jquery-easyui-texteditor/jquery.texteditor.js"></script>
     <script type="text/javascript" charset="UTF-8" src="../../static/js/auditSys/account.js"></script>
     <script type="text/javascript" charset="UTF-8" src="../../static/js/auditSys/table.js"></script>
     <script type="text/javascript" charset="UTF-8" src="../../static/js/auditSys/jquery-1.11.0.min.js"></script>
