--- a/job/templates/jobManagement.html
+++ b/job/templates/jobManagement.html
@@ -11,6 +11,7 @@
     <script type="application/javascript" src="../../static/js/jquery-easyui-1.8.2/jquery.min.js"></script>
     <script type="application/javascript" src="../../static/js/jquery-easyui-1.8.2/jquery.easyui.min.js"></script>
     <script type="text/javascript" charset="UTF-8" src="../../static/js/auditSys/index.js"></script>
+    <script type="text/javascript" charset="UTF-8" src="../../static/js/auditSys/table.js"></script>
 </head>
 <body style="padding-left: 5%;padding-top: 30px">
 
@@ -18,45 +19,104 @@
     <div id="btnSets" style="margin-bottom:5px;">
         <a href="#" onclick="editJob()" class="easyui-linkbutton" iconCls="icon-edit" plain="true">编辑</a>
         <a href="#" onclick="deleteJob()" class="easyui-linkbutton" iconCls="icon-remove" plain="true">删除</a>
+        <a href="#" onclick="reload() " class="easyui-linkbutton" iconCls="icon-reload" plain="true">刷新</a>
     </div>
 </div>
 
 <table class="easyui-datagrid" style="width:95%;height:auto;"
-       url="job" id="tdTable"
-       title="DataGrid - Complex Toolbar" toolbar="#tb"
-       singleSelect="true" fitColumns="true" rownumbers="true" pagination="true" method="get">
-    <thead>
-    <tr>
-        {#        <th field="id" width="30">序号</th>#}
-        <th field="position" width="100">职位</th>
-        <th field="department" width="100">部门</th>
-        <th field="salary" width="70">薪资</th>
-        <th data-options="field:'table',width:100,formatter:planUrl">申请表</th>
-        <th data-options="field:'status',width:50">状态</th>
-        <th data-options="field:'deadline',width:100">截至时间</th>
-        <th field="created_by" width="50">创建人</th>
-        <th field="create_time" width="100">创建时间</th>
-
-    </tr>
-    </thead>
+       id="tdTable">
 </table>
 <script type="text/javascript">
-    function planUrl(value, row, index) {
-        return "<a href=tableTemplate?id=" + value.id + ">" + value.title + "</a>";
+    var datagrid = document.getElementsByClassName('easyui-datagrid')[0];
+    var value = permissionRole();
+    var role = value[0];
+
+    /**
+     * 办公室主任角色可以多看见两列：申请表，浏览人数
+     * **/
+    if (role == 'Office Head') {
+        datagrid.title = '我的发布';
+        $(function () {
+            var pager = $('#tdTable').datagrid('getPager');	// get the pager of datagrid
+            pager.pagination();
+            $('#tdTable').datagrid({
+                url: "job",
+                method: 'get',
+                columns: [[
+                    {field: 'position', title: '职位', width: '120'},
+                    {field: 'department', title: '部门', width: '160', formatter: showName},
+                    {field: 'salary', title: '薪资', width: '70'},
+                    {field: 'table', title: '申请表', width: '130', formatter: planUrl},
+                    {field: 'account', title: '浏览数', width: '50'},
+                    {field: 'status', title: '状态', width: '50'},
+                    {field: 'deadline', title: '截至时间', width: '120'},
+                    {field: 'created_by', title: '创建人', width: '70'},
+                    {field: 'create_time', title: '创建时间', width: '120'},
+                    {field: 'last_update_time', title: '更新时间', width: '120'},
+                ]],
+                fitColumns: "true",
+                singleSelect: "true",
+                toolbar: "#tb",
+                rownumbers: "true",
+                pagination: "true",
+                onDblClickRow: function (index, row) {
+                    $('#tdTable').datagrid("selectRow", index);
+                    var currentRow = $('#tdTable').datagrid("getSelected");
+                    storeLocal(currentRow);
+                    window.location.href = 'jobTemplate?id=' + currentRow['id'];
+                },
+            })
+        })
+    } else {
+        datagrid.title = '职位浏览';
+        var btnSets = document.getElementById('btnSets');
+        btnSets.style.display = 'None';
+        $(function () {
+            var pager = $('#tdTable').datagrid('getPager');	// get the pager of datagrid
+            pager.pagination();
+            $('#tdTable').datagrid({
+                url: "job",
+                method: 'get',
+                columns: [[
+                    {field: 'position', title: '职位', width: '140'},
+                    {field: 'department', title: '部门', width: '180', formatter: showName},
+                    {field: 'salary', title: '薪资', width: '90'},
+                    {field: 'status', title: '状态', width: '70'},
+                    {field: 'deadline', title: '截至时间', width: '140'},
+                    {field: 'created_by', title: '创建人', width: '90'},
+                    {field: 'create_time', title: '创建时间', width: '140'},
+                    {field: 'last_update_time', title: '更新时间', width: '140'},
+                ]],
+                fitColumns: "true",
+                singleSelect: "true",
+                toolbar: "#tb",
+                rownumbers: "true",
+                pagination: "true",
+                onDblClickRow: function (index, row) {
+                    $('#tdTable').datagrid("selectRow", index);
+                    var currentRow = $('#tdTable').datagrid("getSelected");
+                    storeLocal(currentRow);
+                    window.location.href = 'jobTemplate?id=' + currentRow['id'];
+                },
+            })
+        })
     }
 
-    $(function () {
-        var pager = $('#tdTable').datagrid('getPager');	// get the pager of datagrid
-        pager.pagination();
-        $('#tdTable').datagrid({
-            onDblClickRow: function (index, row) {
-                $('#tdTable').datagrid("selectRow", index);
-                var currentRow = $('#tdTable').datagrid("getSelected");
-                window.location.href = 'jobTemplate?id=' + currentRow['id']
-            }
-        })
+    function showName(value) {
+        if (value != null) {
+            return value.name
+        }
+    }
 
-    })
+    /*插入超链接形式*/
+    function planUrl(value) {
+        if (value == null) {
+            return "<a href=createTable?id=" + -1 + ">" + undefined + "</a>";
+        } else {
+            return "<a href=createTable?id=" + value.id + ">" + value.title + "</a>";
+        }
+
+    }
 
     function deleteJob() {
         var currentRow = $('#tdTable').datagrid("getSelected");
@@ -69,7 +129,8 @@
                     url: 'job?id=' + currentRow.id,
                     dataType: 'json',
                     success: function (data) {
-                        alert("成功")
+                        alert("成功");
+                        reload();
                     },
                     error: function () {
                         console.log()
@@ -80,27 +141,38 @@
     }
 
     function editJob() {
-
         var currentRow = $('#tdTable').datagrid("getSelected");
         if (currentRow == null) {
             alert("请先选中一行")
         } else {
+            storeLocal(currentRow);
             window.location.href = 'jobPublic?id=' + currentRow.id
         }
     }
+
+    function reload() {
+        $('#tdTable').datagrid("reload");
+    }
+
+    function storeLocal(currentRow) {
+        localStorage.setItem('department', currentRow.department.name);
+        localStorage.setItem('departmentId', currentRow.department.id);
+        localStorage.setItem('position', currentRow.position);
+        localStorage.setItem('deadline', currentRow.deadline);
+        localStorage.setItem('salary', currentRow.salary);
+        localStorage.setItem('account', currentRow.account);
+        localStorage.setItem('describe', currentRow.describe);
+        localStorage.setItem('requirement', currentRow.requirement);
+        localStorage.setItem('other', currentRow.other);
+        localStorage.setItem('create_time', currentRow.create_time);
+        localStorage.setItem('last_update_time', currentRow.last_update_time);
+        setCookie('tableId', currentRow.table.id);
+        setCookie('tableName', currentRow.table.title);
+    }
 </script>
 <script type="application/javascript">
-    var datagrid = document.getElementsByClassName('easyui-datagrid')[0];
-    var value = permissionRole();
-    var role = value[0];
-    if (role == 'Office Head') {
-        datagrid.title = '我的发布';
 
-    } else {
-        datagrid.title = '职位浏览';
-        var btnSets = document.getElementById('btnSets');
-        btnSets.style.display = 'None';
-    }
+
 </script>
 </body>
 </html>
