--- a/job/templates/jobPublic.html
+++ b/job/templates/jobPublic.html
@@ -4,35 +4,85 @@
     <meta charset="UTF-8">
     <title>招聘发布</title>
     <link rel="stylesheet" href="../../static/css/style.css"/>
+    <link rel="stylesheet" type="text/css" href="../../static/js/jquery-easyui-1.8.2/themes/default/easyui.css">
+    <link rel="stylesheet" type="text/css" href="../../static/js/jquery-easyui-1.8.2/themes/icon.css">
+    <link rel="stylesheet" type="text/css" href="../../static/js/jquery-easyui-texteditor/texteditor.css">
+    <script type="text/javascript" charset="UTF-8" src="../../static/js/auditSys/jquery-1.11.0.min.js"></script>
+    <script type="application/javascript" src="../../static/js/jquery-easyui-1.8.2/jquery.min.js"></script>
+    <script type="application/javascript" src="../../static/js/jquery-easyui-1.8.2/jquery.easyui.min.js"></script>
+    <script type="application/javascript" src="../../static/js/jquery-easyui-texteditor/jquery.texteditor.js"></script>
     <script type="text/javascript" charset="UTF-8" src="../../static/js/auditSys/index.js"></script>
     <script type="text/javascript" charset="UTF-8" src="../../static/js/auditSys/table.js"></script>
-    <script type="text/javascript" charset="UTF-8" src="../../static/js/auditSys/jquery-1.11.0.min.js"></script>
+
 </head>
 <body onload="initTest()">
 <div id="pageTitle">招聘发布</div>
 <br><br>
 <div id="centerContainer">
 
-    <label>招聘单位:</label>
-    <select name="department">
-        <option value="#">选择部门</option>
-        <option value="0">计算机与信息科学学院</option>
-    </select><br><br>
-    <label>招聘职位:</label>
-    <input type="text" name="position"><br><br>
-    <label>截至日期:</label>
-    <input type="datetime-local" name="deadline"><br><br>
-    <label style="margin-left: 6%">薪资:</label>
-    <input type="text" name="salary"><br><br>
-    <label>职位描述:</label>
-    <textarea name="describe"></textarea><br><br>
-    <label>职位要求:</label>
-    <textarea name="requirement"></textarea><br><br>
-    <label>创建申请表:</label>
-    <button class="tabelBtm" id="createTable" onclick="nextStep()">生成表格</button>
-    <br><br>
-    <button class="submitBtm" id="createTable" onclick="publicJob()">发布</button>
-    <br><br>
+    <table cellpadding="8px" id="publicTable">
+        <tr>
+            <td>招聘单位:</td>
+            <td>
+                <input id="department" class="easyui-combobox" name="dept"
+                       data-options="
+                       valueField:'id',
+                       textField:'name',
+                       url:'department',
+                       method:'get',
+                       required:true">
+            </td>
+        </tr>
+        <tr>
+            <td>招聘职位:</td>
+            <td><input id="position" class="easyui-textbox" data-options="required:true"></td>
+        </tr>
+        <tr>
+            <td>截至日期:</td>
+            <td>
+                <input type="datetime-local" id="deadline" id="deadline_id">
+            </td>
+        </tr>
+        <tr>
+            <td>薪资:</td>
+            <td><input id="salary" class="easyui-textbox"></td>
+        </tr>
+        <tr>
+            <td>职位描述:</td>
+            <td>
+                <div class="easyui-texteditor" id="describe" title="职位描述"
+                     style="width:500px;float:left;height:300px;">
+                </div>
+            </td>
+        </tr>
+        <tr>
+            <td>职位要求:</td>
+            <td>
+                <div id="requirement" class="easyui-texteditor" title="职位要求"
+                     style="width:500px;float:left;height:300px;"></div>
+            </td>
+        </tr>
+        <tr>
+            <td>其他:</td>
+            <td>
+                <div id="other" class="easyui-texteditor" title="其他"
+                     style="width:500px;float:left;height:300px;"></div>
+            </td>
+        </tr>
+        <tr>
+            <td>创建申请表:</td>
+            <td>
+                <button class="tabelBtm" id="createTable" onclick="nextStep()">生成表格</button>
+            </td>
+        </tr>
+        <tr>
+            <td></td>
+            <td align="center">
+                <button class="submitBtm" id="submitJob" onclick="publicJob()">发布</button>
+            </td>
+        </tr>
+    </table>
+
 </div>
 </body>
 </html>
