--- a/static/css/style.css
+++ b/static/css/style.css
@@ -194,20 +194,20 @@ select {
     width: 90px;
     height: 40px;
     color: black;
-    margin-top: 30px;
+    /*margin-top: 30px;*/
     background: white;
     border: #CCCCCC solid 1px;
     border-radius: 5px;
     font-size: 14px;
     letter-spacing: 3px;
-    margin-left: 30px;
+    /*margin-left: 30px;*/
 }
 
 .submitBtm {
     width: 120px;
     height: 40px;
-    margin-left: 48%;
-    margin-top: 5%;
+    /*margin-left: 48%;*/
+    margin-top: 30px;
     color: white;
     background: #609AB6;
     border: #609AB6 solid 1px;
